--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "react": "^18",
@@ -19,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "socket.io-client": "^4.7.2",
+    "tailwind-scrollbar": "^3.0.5",
     "yup": "^1.3.2",
     "zod": "^3.22.4"
   },
