--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@types/react-select": "^5.0.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.12",
     "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "react": "^18",
