--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@types/react-select": "^5.0.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
+    "filesize": "^10.1.0",
     "framer-motion": "^10.16.12",
     "js-cookie": "^3.0.5",
     "next": "14.0.3",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
