--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/material": "^5.15.1",
     "@types/react-select": "^5.0.1",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
